fixes timer alignment

--- a/styles/styles_control_panel.css
+++ b/styles/styles_control_panel.css
@@ -108,6 +108,7 @@ body {
   height: 40px;
   margin-top: 27px;
   padding: 12px;
+  padding-top: 7px;
   color: white;
 }
 #logoutButton {
@@ -161,9 +162,12 @@ iframe{
   color: white;
   font-family: 'Advent Pro', sans-serif;
   font-size: 20px;
-  transition: background-color 0.5s ease;
+  transition: background-color,color 0.5s ease;
 }
 .ribbonButton:hover {
   background-color: dimgray;
+}
+.ribbonButton:disabled{
+  color: black;
 }
 </style>
